# vulkan-graphics-engine-study

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
.cache/clangd/index/: imgui_impl_vulkan.cpp.1D21797362A91117.idx  imgui_impl_vulkan.h.CA05842EC2B835FA.idx  main.cpp.1C022CEC79820128.idx  vk_base.cpp.0E79B6F54713CC46.idx  vk_base.h.55852FE631DB240B.idx  vk_window.cpp.DA5DEF4E56053C52.idx  vk_window.h.6E7A2471EF8E22CE.idx
.claude/: settings.local.json
chapter00/: CMakeLists.txt
chapter00/01-basic-window/: CMakeLists.txt  README.md  main.cpp
chapter00/02-widgets/: CMakeLists.txt  README.md  main.cpp
chapter00/03-input/: CMakeLists.txt  README.md  main.cpp
chapter00/04-layout/: CMakeLists.txt  README.md  main.cpp
chapter00/05-colors/: CMakeLists.txt  README.md  main.cpp
chapter00/06-plots/: CMakeLists.txt  README.md  main.cpp
chapter00/07-tables/: CMakeLists.txt  README.md  main.cpp
chapter00/08-menus/: CMakeLists.txt  README.md  main.cpp
chapter00/09-tree-lists/: CMakeLists.txt  README.md  main.cpp
chapter00/10-custom-draw/: CMakeLists.txt  README.md  main.cpp
chapter01/: CMakeLists.txt
chapter01/00-vulkan-init/: CMakeLists.txt  README.md  main.cpp
chapter01/01-triangle-imgui/: CMakeLists.txt  README.md  main.cpp
chapter01/01-triangle-imgui/shaders/: triangle.vert
chapter01/02-vertex-buffers/: CMakeLists.txt  README.md  main.cpp
chapter01/03-index-buffers/: CMakeLists.txt  README.md  main.cpp
chapter01/04-uniform-buffers/: CMakeLists.txt  README.md  main.cpp
chapter01/05-texture-mapping/: CMakeLists.txt  README.md  main.cpp
chapter01/06-depth-testing/: CMakeLists.txt  README.md  main.cpp
chapter01/07-model-loading/: CMakeLists.txt  README.md  main.cpp
chapter01/08-lighting/: CMakeLists.txt  README.md  main.cpp
chapter01/09-raytracing-setup/: CMakeLists.txt  README.md  main.cpp
chapter01/10-raytracing-triangle/: CMakeLists.txt  README.md  main.cpp
chapter01/11-raytracing-reflection/: CMakeLists.txt  README.md  main.cpp
chapter01/track-b-modular/: CMakeLists.txt
chapter01/track-b-modular/01-instance-device/: CMakeLists.txt  main.cpp
chapter01/track-b-modular/02-add-swapchain/: CMakeLists.txt  main.cpp
chapter01/track-b-modular/03-add-renderpass/: CMakeLists.txt  main.cpp
chapter01/track-b-modular/04-add-pipeline/: CMakeLists.txt  main.cpp
chapter02/: CMakeLists.txt
chapter02/01-vertex-animation/: CMakeLists.txt  README.md  main.cpp
chapter02/01-vertex-animation/shaders/: animation.vert  vert.spv
chapter02/02-fragment-gradients/: CMakeLists.txt  README.md  main.cpp
chapter02/02-fragment-gradients/shaders/: frag.spv  gradient.frag  gradient.vert  vert.spv
chapter02/03-fragment-textures/: CMakeLists.txt  README.md  main.cpp
chapter02/03-fragment-textures/shaders/: frag.spv  texture.frag  texture.vert  vert.spv
chapter02/04-fragment-lighting/: CMakeLists.txt  README.md  main.cpp
chapter02/04-fragment-lighting/shaders/: frag.spv  lighting.frag  lighting.vert  vert.spv
chapter02/05-geometry-normals/: CMakeLists.txt  README.md  main.cpp
chapter02/05-geometry-normals/shaders/: mesh.frag  mesh.vert  mesh_frag.spv  mesh_vert.spv  normals.geom  normals.vert  normals_geom.spv  normals_vert.spv
chapter02/06-geometry-explosion/: CMakeLists.txt  README.md  main.cpp
chapter02/06-geometry-explosion/shaders/: explosion.frag  explosion.geom  explosion.vert  explosion_frag.spv  explosion_geom.spv  explosion_vert.spv
chapter02/07-compute-particles/: CMakeLists.txt  README.md  main.cpp
chapter02/07-compute-particles/shaders/: particle.comp  particle.frag  particle.vert  particle_comp.spv  particle_frag.spv  particle_vert.spv
chapter02/08-compute-image-filter/: CMakeLists.txt  README.md  main.cpp
chapter02/08-compute-image-filter/shaders/: filter.comp  filter_comp.spv  fullscreen.frag  fullscreen.vert
chapter02/09-tessellation-terrain/: CMakeLists.txt  README.md  main.cpp
chapter02/09-tessellation-terrain/shaders/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert  terrain_frag.spv  terrain_tesc.spv  terrain_tese.spv  terrain_vert.spv
chapter02/10-raytracing-shadows/: CMakeLists.txt  README.md  main.cpp
chapter02/10-raytracing-shadows/shaders/: fullscreen.frag  fullscreen.vert  fullscreen_frag.spv  raytrace.comp  raytrace_comp.spv
chapter02/common/: CMakeLists.txt  shader_example_base.cpp  shader_example_base.h
common/: CMakeLists.txt  vk_base.cpp  vk_base.h  vk_window.cpp  vk_window.h
common/modules/: vk_commands.cpp  vk_commands.h  vk_device.cpp  vk_device.h  vk_imgui.cpp  vk_imgui.h  vk_instance.cpp  vk_instance.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderpass.cpp  vk_renderpass.h  vk_swapchain.cpp  vk_swapchain.h
docs/: learning-path.md
