# Chapter 00: ImGui Tutorial Examples

# Add all subdirectories
add_subdirectory(01-basic-window)
add_subdirectory(02-widgets)
add_subdirectory(03-input)
add_subdirectory(04-layout)
add_subdirectory(05-colors)
add_subdirectory(06-plots)
add_subdirectory(07-tables)
add_subdirectory(08-menus)
add_subdirectory(09-tree-lists)
add_subdirectory(10-custom-draw)