# Chapter 03: Shader Programming Examples

# Add all subdirectories
add_subdirectory(01-vertex-animation)
add_subdirectory(02-fragment-gradients)
add_subdirectory(03-fragment-textures)
add_subdirectory(04-fragment-lighting)
add_subdirectory(05-geometry-normals)
add_subdirectory(06-geometry-explosion)
add_subdirectory(07-compute-particles)
add_subdirectory(08-compute-image-filter)
add_subdirectory(09-tessellation-terrain)
add_subdirectory(10-raytracing-shadows)
