# Chapter 02: Shader Programming Examples
#
# ShaderExampleBase를 사용하면 각 예제가 셰이더 로직에만 집중할 수 있습니다.

# 공통 라이브러리
add_subdirectory(common)

# 개별 예제들
add_subdirectory(01-vertex-animation)
add_subdirectory(02-fragment-gradients)
add_subdirectory(03-fragment-textures)
add_subdirectory(04-fragment-lighting)
add_subdirectory(05-geometry-normals)
add_subdirectory(06-geometry-explosion)
add_subdirectory(07-compute-particles)
add_subdirectory(08-compute-image-filter)
add_subdirectory(09-tessellation-terrain)
add_subdirectory(10-raytracing-shadows)
